// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDayOffTemplate 함수 오전 반차 휴가 신청서 템플릿을 반환한다 1`] = `"[SSAFY] 2월 2일(금) 구미 1반 실습코치 이희진 오전 반차 신청서 송부"`;

exports[`getDayOffTemplate 함수 오전 반차 휴가 신청서 템플릿을 반환한다 2`] = `
"
    <div>안녕하십니까, 10기 구미 실습코치 이희진입니다.</div>
    <br>
    <div>2월 2일(금) 오전 반차 신청서 첨부파일로 송부 드립니다.</div>
    <br>
    <b>특이사항</b>
    <br>
    <div>- 해당 사항 없음.</div>
    <br>
    <div>감사합니다.</div>
    <div>이희진 드림.</div>
  "
`;

exports[`getDayOffTemplate 함수 오후 반차 휴가 신청서 템플릿을 반환한다 1`] = `"[SSAFY] 2월 2일(금) 구미 1반 실습코치 이희진 오후 반차 신청서 송부"`;

exports[`getDayOffTemplate 함수 오후 반차 휴가 신청서 템플릿을 반환한다 2`] = `
"
    <div>안녕하십니까, 10기 구미 실습코치 이희진입니다.</div>
    <br>
    <div>2월 2일(금) 오후 반차 신청서 첨부파일로 송부 드립니다.</div>
    <br>
    <b>특이사항</b>
    <br>
    <div>- 해당 사항 없음.</div>
    <br>
    <div>감사합니다.</div>
    <div>이희진 드림.</div>
  "
`;

exports[`getDayOffTemplate 함수 하루 휴가 신청서 템플릿을 반환한다 1`] = `"[SSAFY] 2월 2일(금) 구미 1반 실습코치 이희진 휴가 신청서 송부"`;

exports[`getDayOffTemplate 함수 하루 휴가 신청서 템플릿을 반환한다 2`] = `
"
    <div>안녕하십니까, 10기 구미 실습코치 이희진입니다.</div>
    <br>
    <div>2월 2일(금) 휴가 신청서 첨부파일로 송부 드립니다.</div>
    <br>
    <b>특이사항</b>
    <br>
    <div>- 해당 사항 없음.</div>
    <br>
    <div>감사합니다.</div>
    <div>이희진 드림.</div>
  "
`;
